# publishing-python-packages

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: codeql-analysis.yml  mail.yml  main.yml
docs/: conf.py  index.rst
docs/reference/: imppkg.harmonic_mean.rst  imppkg.harmony.rst  imppkg.hello.rst  imppkg.rst  modules.rst
src/imppkg/: harmonic_mean.pyi  harmonic_mean.pyx  harmony.py
test/: test_harmonic_mean.py
