[metadata]
name = publishing-python-packages
version = 0.0.1

[options]
include_package_data = True
install_requires = termcolor>=1.1.0,<2
package_dir =
    =src
packages = find:

[options.packages.find]
where = src
exclude =
    test*

[options.entry_points]
console_scripts =

[tool:pytest]
addopts = --cov
testpaths =
    test

[coverage:run]
branch = True
source = imppkg

[coverage:report]
exclude_lines =
    pragma: no cover
    if __name__ == .__main__.:
skip_covered = True
show_missing = True

[coverage:paths]
source =
    src/imppkg/
    .venv/lib/python3.10/site-packages/imppkg/

[tox:tox]
isolated_build = True
envlist = py310,py39

[testenv]
command = pytest
deps =
    pytest
    pytest-cov
