[metadata]
name = pubpypack-harmony-sourcedelica
version = 0.0.4

[options]
include_package_data = True
install_requires = termcolor>=1.1.0,<2
package_dir =
    =src
packages = find:

[options.packages.find]
where = src
exclude =
    test*

[options.entry_points]
console_scripts =
    harmony = imppkg.harmony:main

[tool:pytest]
addopts = --cov
testpaths =
    test

[coverage:run]
branch = True
source = imppkg

[coverage:report]
exclude_lines =
    pragma: no cover
    if __name__ == .__main__.:
skip_covered = True
show_missing = True

[coverage:paths]
source =
    src/imppkg/
    .venv/lib/python3.10/site-packages/imppkg/

[flake8]
max-line-length = 80

[tox:tox]
isolated_build = True
envlist = py310,py39

[testimports]
deps =
    pytest

; This is run for each env in envlist when tox is run with no params
[testenv]
commands =
    pytest {posargs}
deps =
    {[testimports]deps}
    pytest-cov

[testenv:weather]
skip_install = True
commands =
    python -c "import requests; print(requests.get('http://wttr.in').text)"
deps =
    requests

[testenv:typecheck]
deps =
    {[testimports]deps}
    mypy
    types-termcolor
commands =
    mypy {posargs:src test}

[testenv:format]
skip_install = True
deps =
    black
commands =
    black {posargs:--check --diff src test}

[testenv:lint]
skip_install = True
deps =
    flake8
    flake8-bugbear
commands =
    flake8 {posargs:src test}
